# applied-devops-lab-v2

./: .gitignore  Jenkinsfile  README.md
app-python/: README.md  pyproject.toml
app-python/src/app_python/: __init__.py
app-python/src/app_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app-python/tests/: test_mathops.py
app-python/tools/: uploader.py
docs/: tutorial.md
groovy-shared-library/: README.md
groovy-shared-library/src/org/example/: TextUtils.groovy
groovy-shared-library/vars/: dockerRun.groovy  sayHello.groovy
jenkins/: Dockerfile  docker-compose.yml
typescript-app/: jest.config.js  package.json  sonar-project.properties  tsconfig.json
typescript-app/scripts/: package.sh
typescript-app/src/: index.ts
typescript-app/tests/: greet.test.ts
